Details
-
Bug
-
Status: Resolved
-
Critical
-
Resolution: Fixed
-
None
-
None
-
None
-
ghx-label-7
Description
Currently, we haven't enabled test_scanner_fuzz for ORC yet, since the ORC library (release-1.4.3) is not robust for corrupt files (ORC-315). We should enableĀ it after a new version of the ORC library is released.
Attachments
Attachments
Issue Links
- is blocked by
-
IMPALA-9249 HdfsOrcScanner crash on resolving file schema
-
- Resolved
-
-
IMPALA-9250 HdfsOrcScanner crash in calling orc::createReader
-
- Resolved
-
-
IMPALA-9251 HdfsOrcScanner crash in AssembleRows
-
- Resolved
-
-
IMPALA-9277 Crash due to unhandled exception thrown from orc::ColumnSelector::updateSelectedByTypeId
-
- Resolved
-
-
IMPALA-9288 Crash due to memory leak in scan node of orc scanner
-
- Resolved
-
-
IMPALA-9297 HdfsOrcScanner crash in orc::RleDecoderV2::next
-
- Resolved
-
-
IMPALA-9306 HdfsOrcScanner crashes in orc::readFully
-
- Resolved
-
-
IMPALA-9324 HdfsOrcScanner crashes in DCHECK failure in OrcSchemaResolver::BuildSchemaPath
-
- Resolved
-
-
ORC-414 [C++] ORC files with malformed protobuf objects can crash a release build
-
- Closed
-
-
ORC-315 More robust on reading random corrupt files
-
- Open
-
- relates to
-
ORC-403 Should check offsets got from protobuf Objects
-
- Closed
-
-
ORC-400 Support Hadoop3 in C++ lib
-
- Open
-