CDH-67627: disable ORC scanner by default for CDH

There are a couple of issues we'd like to see fixed before
this is production ready, specifically IMPALA-6772 and
IMPALA-7730.

Change-Id: I71700b6a1a6e6bce3d87762c40603abec4bfd4ff
Reviewed-on: https://gerrit.sjc.cloudera.com/39060
Reviewed-by: Tim Armstrong <tarmstrong@cloudera.com>
Tested-by: Tim Armstrong <tarmstrong@cloudera.com>
Reviewed-on: https://gerrit.sjc.cloudera.com/40085
Tested-by: Jenkins User <jenkins@cloudera.com>
CDH-Build: Jenkins User <jenkins@cloudera.com>
Reviewed-by: Lars Volker <lv@cloudera.com>
Quasar-L0: Lars Volker <lv@cloudera.com>